--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -7,6 +7,9 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
 }
+#vidcenter{
+  margin: 0 auto;
+}
 p {
   font-size: 20px;
 }
