--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -8,7 +8,13 @@ body {
   overflow-x: hidden;
 }
 #vidcenter{
-  margin: 0 auto;
+  width: 560px; /* you have to have a size or this method doesn't work */
+    height: 315px; /* think about making these max-width instead - might give you some more responsiveness */
+
+    position: absolute; /* positions out of the flow, but according to the nearest parent */
+    top: 0; right: 0; /* confuse it i guess */
+    bottom: 0; left: 0;
+    margin: auto; /* make em equal */
 }
 p {
   font-size: 20px;
@@ -223,7 +229,7 @@ section.success {
   width: 100%;
   height: 20px;
   font-size: 20px;
-  
+
   text-align: center;
   top: 50%;
   margin-top: -12px;
