--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -7,10 +7,10 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
 }
-iframe {
+/*iframe {
   display: block;
   margin: 0 auto;
-}
+}*/
 p {
   font-size: 20px;
 }
